Revert "fixed overflow bug in menu existed with some languages (polish)"
This reverts commit cded1197733bfac6ee048f0937334aa22e14ca36.

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -400,7 +400,6 @@ input, textarea, select, .btn {
     height: 100%;
     border-radius: 3px;
     margin-left: 6px;
-    width: 45px;
 }
 
 .input-container-noflex .input-day {
@@ -491,7 +490,7 @@ input, textarea, select, .btn {
 }
 
 .side-menu .open-submenu {
-    min-width: 26px;
+    min-width: 38px;
     height: 38px;
     background: url(../images/arrow.png) center no-repeat;
     margin: auto 0;
